fixed overlapping home header

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,6 +13,7 @@
 		padding: 5vh 0 0 0;
 		font-size: 2.2em;
 		text-align: center;
+		line-height: 1.2;
 	}
 	.contact {
 		padding: 6vh 0 0 0;
